test/valid/array_assignment.csmall
#include <stdio.h>

int main() {
	int a[3];
	a[0] = 5;
	printf("a[0] = %i", a[0]);
	return 0;
}